# cpremote

./: LICENSE.md  README.md  pyproject.toml
cpremote/: cpremote.py
